--- a/view/detail.ejs
+++ b/view/detail.ejs
@@ -26,32 +26,30 @@
       <a href="#"><img src="images/text.png" alt="Berichten"></a>
     </header>
     <main>
+      <% data.forEach (function (match,index) { %>
       <a href="/matches"><img src="images/back.png" alt="Terug"></a>
       <img src="images/nr1.png" alt="Daan de Jong">
-      <h2>Daan de Jong</h2>
+      <h2><%= match.name %></h2>
       <ul>
-        <li><b>26 jaar</b></li>
-        <li>Komt uit <b>Amsterdam</b></li>
-        <li><b>Man</b></li>
-        <li>Werkt bij <b>ABN Amro</b></li>
-        <li>Opleiding <b>Commerciële economie HvA</b></li>
-        <li>is een <b>Avondmens</b></li>
-        <li><b>Ik hou van..</b> Koken, Concerten, Mexicaanses eten & Netflix</li>
-        <li>Astronomy, reading, coffee-shop people watching,
-          playing make believe with my nephew,
-          eating out on Monday nights, and staying inside on rainy days.
-          Just a few of the thing that make me happy.
-          Maybe you can help add to the list :) </li>
+        <li><b><%= match.age %> jaar</b></li>
+        <li>Komt uit <b><%= match.location %></b></li>
+        <li><b><%= match.gender %></b></li>
+        <li>Werkt bij <b><%= match.work %></b></li>
+        <li>Opleiding <b><%= match.career %></b></li>
+        <li>is een <b><%= match.ampm %></b></li>
+        <li><b>Ik hou van..</b> <%= match.bio %></li>
+        <li><b>Beschrijving: </b><%= match.description %></li>
       </ul>
 
     <h4>Bucketlist</h4>
     <ol>
-      <li>Skydiven <button type="button" name="button">Sport</button></li>
-      <li>Bali <button type="button" name="button">Reizen</button></li>
-      <li>Nieuwe opleiding <button type="button" name="button">Prestatie</button></li>
-      <li>Kookcursus volgen <button type="button" name="button">Eten & Drinken</button></li>
-      <li>Duiken <button type="button" name="button">Sport</button></li>
+      <li><%= match.b1 %><button type="button" name="button">Sport</button></li>
+      <li><%= match.b2 %><button type="button" name="button">Reizen</button></li>
+      <li><%= match.b3 %> <button type="button" name="button">Prestatie</button></li>
+      <li><%= match.b4 %> <button type="button" name="button">Eten & Drinken</button></li>
+      <li><%= match.b5 %> <button type="button" name="button">Sport</button></li>
     </ol>
+    <% }) %>
     </main>
     <footer>
       <button type="button" name="button"><img src="images/dislike.png" alt="Dislike"></button>
