--- a/view/matches.ejs
+++ b/view/matches.ejs
@@ -41,7 +41,7 @@
           </ul>
           <!--<a href="/<%= data[index]._id %>"><button type="button" name="button">Bekijk meer info</button></a>
           <a href="/<%= data[index]._id %>"><%= data[index].title %></a>-->
-          <a href="/nr1"><button type="button" name="button">Bekijk meer info</button></a>
+          <a href="/<%= match.id %>" ><button type="button" name="button">Bekijk meer info</button></a>
           <button type="button" name="button"><img src="images/dislike.png" alt="Dislike"></button>
           <button type="button" name="button"><img src="images/hart.png" alt="Like"></button>
         </article>
