--- a/view/registreren1.ejs
+++ b/view/registreren1.ejs
@@ -10,20 +10,20 @@
     <header>
       <nav>
         <ul>
-          <li>  <a href="#">Matches</a>
+          <li>  <a href="/matches">Matches</a>
           </li>
-          <li>  <a href="#">Profiel</a>
+          <li>  <a href="/profile">Profiel</a>
           </li>
-          <li>  <a href="#">Test resultaten</a>
+          <li>  <a href="/results">Test resultaten</a>
           </li>
-          <li>  <a href="#">Instellingen</a>
+          <li>  <a href="/settings">Instellingen</a>
           </li>
-          <li>  <a href="index.html">Uitloggen</a>
+          <li>  <a href="/">Uitloggen</a>
           </li>
         </ul>
       </nav>
       <img class="logo" src="images/logoBucketlove.png" alt="Bucketlove">
-      <a href="#"><img src="images/text.png" alt="Berichten"></a>
+      <a href="/messages"><img src="images/text.png" alt="Berichten"></a>
     </header>
     <main>
       <h2>Welkom <i>Susan</i>!</h2>
