--- a/view/index.ejs
+++ b/view/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Home</title>
     <link rel="stylesheet" href="/stylesheet/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name=viewport content=width=device-width,initial-scale=1>
   </head>
 
   <body>
@@ -47,13 +47,13 @@
     </main>
     <footer>
       <img class="logo" src="images/logoBucketlove2.png" alt="Bucketlove">
-      <form class="login" action="index.html">
+      <form class="login" action="/matches" method="post">
         <fieldset>
           <legend>Login</legend>
             <label for="email">E-mailadres</label>
               <input type="email" name="mail" id="email" required>
             <label for="wachtwoord">wachtwoord</label>
-              <input type="text" name="password" id="wachtwoord" required>
+              <input type="password" name="password" id="wachtwoord" required>
             <button type="submit" name="button">Ga door</button>
         </fieldset>
       </form>
