--- a/view/voltooid.ejs
+++ b/view/voltooid.ejs
@@ -33,7 +33,9 @@
         Veel plezier met daten!</p>
     </main>
     <footer>
-      <a href="/matches">Bekijk matches</a>
+      <form class="bekijkMatches" action="/matches" method="post">
+        <button type="submit" name="button">Bekijk matches</button>
+      </form>
     </footer>
   </body>
 </html>
