Insert was working, not anymore tho.. No error?

--- a/view/index.ejs
+++ b/view/index.ejs
@@ -58,8 +58,7 @@
         </fieldset>
       </form>
       <h2>Nog geen account?</h2>
-        <form class="go" action="/registreren" method="post">
-          <button type="submit" name="button">Registreer nu</button>
+          <a href="/registreren">Registreer nu</a>
         </form>
     </footer>
   </body>
