--- a/view/index.ejs
+++ b/view/index.ejs
@@ -58,7 +58,7 @@
         </fieldset>
       </form>
       <h2>Nog geen account?</h2>
-          <a href="/registreren">Registreer nu</a>
+          <a href="/signUpForm">Registreer nu</a>
         </form>
     </footer>
   </body>
