--- a/view/registreren.ejs
+++ b/view/registreren.ejs
@@ -13,7 +13,7 @@
       <img class="logo" src="images/logoBucketlove.png" alt="Bucketlove">
     </header>
     <main>
-      <form class="registeren" action="/registreren" method="POST">
+      <form class="registeren" action="/signUp" method="POST">
         <fieldset>
           <legend>Registreren</legend>
             <label for="name">Naam (volledig)</label>
