--- a/view/detail.ejs
+++ b/view/detail.ejs
@@ -10,15 +10,20 @@
     <header>
         <nav>
           <ul>
-            <li>  <a href="/matches">Matches</a>
+            <li>
+              <a href="/matches">Matches</a>
             </li>
-            <li>  <a href="/profile">Profiel</a>
+            <li>
+              <a href="/profile">Profiel</a>
             </li>
-            <li>  <a href="/results">Test resultaten</a>
+            <li>
+              <a href="/results">Test resultaten</a>
             </li>
-            <li>  <a href="/settings">Instellingen</a>
+            <li>
+              <a href="/settings">Instellingen</a>
             </li>
-            <li>  <a href="/">Uitloggen</a>
+            <li>
+              <a href="/">Uitloggen</a>
             </li>
           </ul>
         </nav>
