--- a/view/profile.ejs
+++ b/view/profile.ejs
@@ -12,11 +12,21 @@
           <label for="toggle">&#9776;</label>
           <input type="checkbox" id="toggle">
           <ul>
-              <li>  <a href="/matches">Matches</a></li>
-              <li>  <a href="/profile">Profiel</a></li>
-              <li>  <a href="/results">Test resultaten</a></li>
-              <li>  <a href="/settings">Instellingen</a></li>
-              <li>  <a href="/">Uitloggen</a></li>
+            <li>
+              <a href="/matches">Matches</a>
+            </li>
+            <li>
+              <a href="/profile">Profiel</a>
+            </li>
+            <li>
+              <a href="/results">Test resultaten</a>
+            </li>
+            <li>
+              <a href="/settings">Instellingen</a>
+            </li>
+            <li>
+              <a href="/">Uitloggen</a>
+            </li>
           </ul>
       </nav>
       <img class="logo" src="images/logoBucketlove.png" alt="Bucketlove">
