--- a/view/registreren.ejs
+++ b/view/registreren.ejs
@@ -16,64 +16,74 @@
       <form class="registeren" action="/signUp" method="POST">
         <fieldset>
           <legend>Registreren</legend>
-            <label for="name">Naam (volledig)</label>
-              <input type="text" name="name" id="name" required>
-              <label for="email">E-mailadres</label>
-                <input type="email" name="email" id="email">
-                <label for="gender">Geslacht</label>
-                <input type="radio" name="gender" id="gender">Man
-                <input type="radio" name="gender" id="gender">Vrouw
-                <input type="radio" name="gender" id="gender">Genderneutraal
-              <label for="age">Geboorte datum</label>
-                <input type="number" name="age" id="age">
-              <label for="location">Woonplaats</label>
-                <input type="text" name="location" id="location">
-                <label for="ampm">Ben je een meer een ochtend of avond mens?</label>
-                  <input type="radio" name="ampm" id="ampm">Ochtend
-                  <input type="radio" name="ampm" id="ampm">Avond
-                <label for="career">Opleiding</label>
-                  <input type="text" name="career" id="career">
-                <label for="work">Werk en functie</label>
-                  <input type="text" name="work" id="work">
-                  <label for="interests">Ik hou van..</label>
-                    <input type="beschrijving" name="interests" id="interests" placeholder="koffie, huisdieren, ..">
-                  <label for="bio">Geef een korte beschrijving over jezelf</label>
-                    <input type="text" name="bio" id="bio">
-                  <label for="password">Geef een wachtwoord op</label>
-                    <input type="password" name="password" id="password">
+          <label for="name">Naam (volledig)</label>
+          <input type="text" name="name" id="name" required>
+
+          <label for="email">E-mailadres</label>
+          <input type="email" name="email" id="email">
+
+          <label for="gender">Geslacht</label>
+          <input type="radio" name="gender" id="gender-male" value="gender-male">Man
+          <input type="radio" name="gender" id="gender-female" value="gender-female">Vrouw
+
+          <label for="age">Geboorte datum</label>
+          <input type="number" name="age" id="age">
+
+          <label for="location">Woonplaats</label>
+          <input type="text" name="location" id="location">
+
+          <label for="ampm">Ben je een meer een ochtend of avond mens?</label>
+          <input type="radio" name="ampm" id="ampm-morning" value="ampm-morning">Ochtend
+          <input type="radio" name="ampm" id="ampm-evening" value="ampm-evening">Avond
+
+          <label for="career">Opleiding</label>
+          <input type="text" name="career" id="career">
+
+          <label for="work">Werk en functie</label>
+          <input type="text" name="work" id="work">
+
+          <label for="interests">Ik hou van..</label>
+          <input type="beschrijving" name="interests" id="interests" placeholder="koffie, huisdieren, ..">
+
+          <label for="bio">Geef een korte beschrijving over jezelf</label>
+          <input type="text" name="bio" id="bio">
+
+          <label for="password">Geef een wachtwoord op</label>
+          <input type="password" name="password" id="password">
         </fieldset>
         <fieldset>
+          <legend>Match instellingen</legend>
           <label for="match">Met wie wil jij gematcht worden? (maximaal 3)</label>
-            <input type="checkbox" name="matches" id="match">Man
-            <input type="checkbox" name="matches" id="match">Vrouw
-            <input type="checkbox" name="matches" id="match">Genderneutraal
+          <input type="checkbox" name="matches" id="match-male" value="match-male">Man
+          <input type="checkbox" name="matches" id="match-female" value="match-female">Vrouw
+
           <label for="min">Minimum leeftijd</label>
-            <input type="number" name="minimum" id="min">
-            <h4>VS</h4>
+          <input type="number" name="minimum" id="min">
+
+          <h4>VS</h4>
           <label for="max">Maximum leeftijd</label>
-              <input type="number" name="maximum" id="max">
+          <input type="number" name="maximum" id="max">
+
           <label for="interests">Geef een korte beschrijving over wat jij zoekt in een partner</label>
-            <input type="text" name="interresses" id="interests">
-            <label for="tot">Hoe ver wil jij reizen?</label>
-              <select class="tot" name="till">
-                <option value="10">10 km</option>
-                <option value="20">20 km</option>
-                <option value="30">30 km</option>
-                <option value="40">40 km</option>
-                <option value="50">50 km</option>
-                <option value="60">60 km</option>
-                <option value="70">70 km</option>
-                <option value="80">80 km</option>
-                <option value="90">90 km</option>
-                <option value="100">100 km</option>
-                <option value="none">Geen voorkeur</option>
-              </select>
+          <input type="text" name="interresses" id="interests">
+
+          <label for="tot">Hoe ver wil jij reizen?</label>
+          <select class="tot" name="till">
+            <option value="10">10 km</option>
+            <option value="20">20 km</option>
+            <option value="30">30 km</option>
+            <option value="40">40 km</option>
+            <option value="50">50 km</option>
+            <option value="60">60 km</option>
+            <option value="70">70 km</option>
+            <option value="80">80 km</option>
+            <option value="90">90 km</option>
+            <option value="100">100 km</option>
+            <option value="none">Geen voorkeur</option>
+          </select>
           <button type="submit" name="button">Wordt lid</button>
         </fieldset>
       </form>
     </main>
-    <footer>
-
-    </footer>
   </body>
 </html>
