--- a/view/voltooid.ejs
+++ b/view/voltooid.ejs
@@ -10,15 +10,20 @@
     <header>
       <nav>
         <ul>
-          <li>  <a href="#">Matches</a>
+          <li>
+            <a href="#">Matches</a>
           </li>
-          <li>  <a href="#">Profiel</a>
+          <li>
+            <a href="#">Profiel</a>
           </li>
-          <li>  <a href="#">Test resultaten</a>
+          <li>
+            <a href="#">Test resultaten</a>
           </li>
-          <li>  <a href="#">Instellingen</a>
+          <li>
+            <a href="#">Instellingen</a>
           </li>
-          <li>  <a href="index.html">Uitloggen</a>
+          <li>
+            <a href="index.html">Uitloggen</a>
           </li>
         </ul>
       </nav>
@@ -26,7 +31,6 @@
       <a href="#"><img src="images/text.png" alt="Berichten"></a>
     </header>
     <main>
-      
       <h2>Dank je wel <i>Susan</i>!</h2>
       <p>Je bent er helemaal klaar voor! Bekijk nu je potentiele matches!
         Deze kun je liken of verwijderen.
