--- a/view/detail.ejs
+++ b/view/detail.ejs
@@ -23,7 +23,7 @@
               <a href="/settings">Instellingen</a>
             </li>
             <li>
-              <a href="/">Uitloggen</a>
+              <a href="/logOut">Uitloggen</a>
             </li>
           </ul>
         </nav>
