--- a/view/voltooid.ejs
+++ b/view/voltooid.ejs
@@ -23,7 +23,7 @@
             <a href="#">Instellingen</a>
           </li>
           <li>
-            <a href="index.html">Uitloggen</a>
+            <a href="/logOut">Uitloggen</a>
           </li>
         </ul>
       </nav>
@@ -31,7 +31,7 @@
       <a href="#"><img src="images/text.png" alt="Berichten"></a>
     </header>
     <main>
-      <h2>Dank je wel <i>Susan</i>!</h2>
+      <h2>Dank je wel <i><%= data.name %></i>!</h2>
       <p>Je bent er helemaal klaar voor! Bekijk nu je potentiele matches!
         Deze kun je liken of verwijderen.
         Wanneer jullie beiden elkaar hebben geliket kunnen jullie beginnen met chatten!
