--- a/view/profile.ejs
+++ b/view/profile.ejs
@@ -25,7 +25,7 @@
               <a href="/settings">Instellingen</a>
             </li>
             <li>
-              <a href="/">Uitloggen</a>
+              <a href="/logOut">Uitloggen</a>
             </li>
           </ul>
       </nav>
