login & sign up

--- a/view/index.ejs
+++ b/view/index.ejs
@@ -31,7 +31,7 @@
           <img src="images/travel.jpg" alt="Reizen">
           <h3>Stap 2</h3>
           <p>Maak een bucketlist aan! Jouw bucketlist word onderverdeeld in verschillende categoriëen.
-          Aan de hand van deze categoriëen word jouw perfecte match gevonden.</p>
+            Aan de hand van deze categoriëen word jouw perfecte match gevonden.</p>
           <img src="images/sport.jpg" alt="Sport">
           <img src="images/amusement.jpg" alt="Disneyland">
         </article>
@@ -40,18 +40,18 @@
           <p>Jouw perfecte match gevonden uit onze selectie voor jou?
             Leer elkaar kennen door te chatten!
             En hopelijk volgt daarop natuurlijk een date of wie weet, misschien wel jouw soulmate!</p>
-            <img src="images/love.jpg" alt="Love">
+          <img src="images/love.jpg" alt="Love">
         </article>
       </section>
       <h4>Swipe up to join!</h4>
     </main>
     <footer>
       <img class="logo" src="images/logoBucketlove2.png" alt="Bucketlove">
-      <form class="login" action="/matches" method="post">
+      <form class="login" action="/login" method="post">
         <fieldset>
           <legend>Login</legend>
             <label for="email">E-mailadres</label>
-              <input type="email" name="mail" id="email" required>
+              <input type="email" name="email" id="email" required>
             <label for="wachtwoord">wachtwoord</label>
               <input type="password" name="password" id="wachtwoord" required>
             <button type="submit" name="button">Ga door</button>
