--- a/view/voltooid.ejs
+++ b/view/voltooid.ejs
@@ -38,9 +38,7 @@
         Veel plezier met daten!</p>
     </main>
     <footer>
-      <form class="bekijkMatches" action="/matches" method="post">
-        <button type="submit" name="button">Bekijk matches</button>
-      </form>
+      <a href="/matches">Bekijk matches</a>
     </footer>
   </body>
 </html>
