--- a/view/registreren.ejs
+++ b/view/registreren.ejs
@@ -20,7 +20,7 @@
           <input type="text" name="name" id="name" required>
 
           <label for="email">E-mailadres</label>
-          <input type="email" name="email" id="email">
+          <input type="email" name="email" id="email" required>
 
           <label for="gender">Geslacht</label>
           <input type="radio" name="gender" id="gender-male" value="gender-male">Man
@@ -49,7 +49,7 @@
           <input type="text" name="bio" id="bio">
 
           <label for="password">Geef een wachtwoord op</label>
-          <input type="password" name="password" id="password">
+          <input type="password" name="password" id="password" required>
         </fieldset>
         <fieldset>
           <legend>Match instellingen</legend>
