Delete still not working

--- a/view/profile.ejs
+++ b/view/profile.ejs
@@ -32,5 +32,8 @@
       <img class="logo" src="images/logoBucketlove.png" alt="Bucketlove">
       <a href="/messages"><img src="images/text.png" alt="Berichten"></a>
     </header>
+    <main>
+      <a href="/remove">Verwijder account</a>
+    </main>
   </body>
 </html>
