--- a/view/voltooid.ejs
+++ b/view/voltooid.ejs
@@ -14,7 +14,7 @@
             <a href="#">Matches</a>
           </li>
           <li>
-            <a href="#">Profiel</a>
+            <a href="/profile">Profiel</a>
           </li>
           <li>
             <a href="#">Test resultaten</a>
