--- a/static/stylesheet/style3.css
+++ b/static/stylesheet/style3.css
@@ -21,7 +21,7 @@ nav{
   margin: 0;
 }
 
-ul {
+nav ul {
   position: absolute;
   list-style: none;
   margin: 5em 0 3em -2em;
@@ -29,7 +29,7 @@ ul {
   display: none;
 }
 
-ul li a{
+nav ul li a{
   text-decoration: none;
   background-color: white;
   display: block;
