--- a/view/registreren.ejs
+++ b/view/registreren.ejs
@@ -13,7 +13,7 @@
       <img class="logo" src="images/logoBucketlove.png" alt="Bucketlove">
     </header>
     <main>
-      <form class="registeren" action="/signUp" method="POST">
+      <form class="registeren" action="/signUp" method="POST" enctype=multipart/form-data>
         <fieldset>
           <legend>Registreren</legend>
           <label for="name">Naam (volledig)</label>
@@ -47,6 +47,9 @@
 
           <label for="bio">Geef een korte beschrijving over jezelf</label>
           <input type="text" name="bio" id="bio">
+
+          <label for="profileImage">Profiel afbeelding</label>
+          <input name="profileImage" type="file" accept="image/*" required>
 
           <label for="password">Geef een wachtwoord op</label>
           <input type="password" name="password" id="password" required>
