--- a/view/index.ejs
+++ b/view/index.ejs
@@ -14,7 +14,7 @@
     </header>
     <main>
       <section>
-        
+
         <article>
           <p>
             Waarom alleen een bucketlist voor jezelf,
@@ -47,19 +47,21 @@
       <h4>Swipe up to join!</h4>
     </main>
     <footer>
-      <img class="logo" src="images/logoBucketlove2.png" alt="Bucketlove">
-      <form class="login" action="/login" method="post">
-        <fieldset>
-          <legend>Login</legend>
-            <label for="email">E-mailadres</label>
-              <input type="email" name="email" id="email" required>
-            <label for="wachtwoord">wachtwoord</label>
-              <input type="password" name="password" id="wachtwoord" required>
-            <button type="submit" name="button">Ga door</button>
-        </fieldset>
-      </form>
-      <h2>Nog geen account?</h2>
-      <a href="/signUpForm">Registreer nu</a>
+        <div>
+          <img class="logo" src="images/logoBucketlove2.png" alt="Bucketlove">
+          <form class="login" action="/login" method="post">
+            <fieldset>
+              <legend>Login</legend>
+              <label for="email">E-mailadres</label>
+                <input type="email" name="email" id="email" required>
+                <label for="wachtwoord">wachtwoord</label>
+                <input type="password" name="password" id="wachtwoord" required>
+                <button type="submit" name="button">Ga door</button>
+              </fieldset>
+            </form>
+            <h2>Nog geen account?</h2>
+          <a href="/signUpForm">Registreer nu</a>
+        </div>
     </footer>
   </body>
 </html>
