--- a/view/registreren.ejs
+++ b/view/registreren.ejs
@@ -26,15 +26,15 @@
           <input type="radio" name="gender" id="gender-male" value="gender-male">Man
           <input type="radio" name="gender" id="gender-female" value="gender-female">Vrouw
 
-          <label for="age">Geboorte datum</label>
+          <label for="age">Leeftijd</label>
           <input type="number" name="age" id="age">
 
           <label for="location">Woonplaats</label>
           <input type="text" name="location" id="location">
 
           <label for="ampm">Ben je een meer een ochtend of avond mens?</label>
-          <input type="radio" name="ampm" id="ampm-morning" value="ampm-morning">Ochtend
-          <input type="radio" name="ampm" id="ampm-evening" value="ampm-evening">Avond
+          <input type="radio" name="ampm" id="ampm-morning" value="Ochtendmens">Ochtendmens
+          <input type="radio" name="ampm" id="ampm-evening" value="Avondmens">Avondmens
 
           <label for="career">Opleiding</label>
           <input type="text" name="career" id="career">
